added navbar and carousal.js

--- a/core/templates/core/app/welcome.html
+++ b/core/templates/core/app/welcome.html
@@ -3,5 +3,39 @@
 
 {% block index %}
 
-hii
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12 p-0">
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <img src="../../../static/core/image/female." alt="">
+            </div>
+            <div class="swiper-slide">
+                <img src="../../../static/core/image/male." alt="">
+            </div>
+            <div class="swiper-slide">
+                <img src="../../../static/core/image/waste." alt="">
+            </div>
+        </div>
+        <div class="swiper-button-next mySwiper-swiper-button-next"></div>
+        <div class="swiper-button-prev mySwiper-swiper-button-prev"></div>
+        <div class="swiper-pagination mySwiper-swiper-pagination"></div>
+        <div class="autoplay-progress" style="opacity: 0;">
+            <svg viewBox="0 0 48 48">
+                <circle cx="24" cy="24" r="20"></circle>
+            </svg>
+            <span></span>
+        </div>
+    </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6"></div>
+    <div class="col-md-6">
+      div.col
+    </div>
+  </div>
+</div>
+
 {% endblock index %}
