--- a/core/templates/core/elements/main-style.html
+++ b/core/templates/core/elements/main-style.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- title and fevicon -->
-<title>SanjuPlayer</title>
+<title>Blinklog</title>
 <link rel="shortcut icon" href="../../../static/core/image/logo.png" type="image/png">
 
 <!-- bootstrap css  -->
