--- a/core/templates/core/partial/base.html
+++ b/core/templates/core/partial/base.html
@@ -6,6 +6,7 @@
 {% endblock appstyling %}
 
 {% block mainapp %}
+  {% include 'core/elements/navbar.html' %}
   {% block index %}
   {% endblock index %}
 {% endblock mainapp %}
