--- a/core/templates/core/elements/script.html
+++ b/core/templates/core/elements/script.html
@@ -1,3 +1,6 @@
 {% load static %}
+<!-- Swiper JS -->
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
 <!-- welcome js -->
 <script src="{% static 'core/js/welcome.js' %}"></script>
