--- a/core/templates/core/elements/style.html
+++ b/core/templates/core/elements/style.html
@@ -1,3 +1,6 @@
 {% load static %}
+<!-- Link Swiper's CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
 <!-- welcome css -->
 <link rel="stylesheet" href="{% static 'core/css/welcome.css' %}">
