--- a/core/static/core/css/welcome.css
+++ b/core/static/core/css/welcome.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: 'CustomFont';
+    src: url('../fonts/Gazpacho.ttf') format('truetype');
+}
 /* navbar */
 .navbar{
     -webkit-box-shadow: 10px 10px 102px 8px rgba(0,0,0,0.75);
@@ -20,53 +24,71 @@
     color: #226ba9;
 }
 
-/* crousal css */
-.swiper {
-    width: 100%;
-    height: 100vh;
-}
-
-.swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
+/* feature css */
+.features-section{
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.feature {
+    position: relative;
+    padding: 10px;
+}
+.feature-content{
+    background-color: #f5f5f5;
+    height: 174px;
+    border-radius: 10px;
+}
+.feature-content-odd{
+    background-color: #f5f5f5;
+    height: 270px;
+    border-radius: 10px;
 }
 
-.swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+/* feature-main-text css */
+.feature-text-div{
+    margin-top: 20vh;
+}
+.feature-main-text{
+    font-size: 5em;
+    font-weight: 600;
+    font-family: 'CustomFont', sans-serif;
+}
+.feature-main-text span{
+    color: #236aa9;
+    font-weight: 800;
+}
+.feature-main-text-para{
+    font-size: 2em;
+    line-height: 38px;
+}
+.features-section .feature-content1{
+    background-image: url(../image/fem_div.png);
+    background-position: bottom right;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-color: #82b8e8;
+}
+.features-section .feature-content2{
+    background-image: url(../image/vic_div.png);
+    background-position: bottom right;
+    background-repeat: no-repeat;
+    background-size: 70%;
+    background-color: #82b8e8;
 }
 
-.autoplay-progress {
+
+.main-text-li{
     position: absolute;
-    right: 16px;
-    bottom: 16px;
-    z-index: 10;
-    width: 48px;
-    height: 48px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    color: var(--swiper-theme-color);
+    top: 1em;
+    left: 1em;
 }
-
-.autoplay-progress svg {
-    --progress: 0;
-    position: absolute;
-    left: 0;
-    top: 0px;
-    z-index: 10;
-    width: 100%;
-    height: 100%;
-    stroke-width: 4px;
-    stroke: var(--swiper-theme-color);
-    fill: none;
-    stroke-dashoffset: calc(125.6px * (1 - var(--progress)));
-    stroke-dasharray: 125.6;
-    transform: rotate(-90deg);
+.text-features{
+    color: black;
+    font-weight: 800;
+    font-size: 1.2em;
+    font-weight: 600;
+}
+.main-text-li{
+    list-style: none;
 }
