--- a/core/templates/core/elements/navbar.html
+++ b/core/templates/core/elements/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar bg-body-tertiary fixed-top">
+<nav class="navbar bg-body-tertiary fixed-top" id="navbar">
     <div class="container-fluid">
         <div class="navbar-logo-div">
             <img class="logo-img" src="../../../static/core/image/logo.png" alt="">
