added machinery start app

--- a/core/templates/core/app/welcome.html
+++ b/core/templates/core/app/welcome.html
@@ -14,7 +14,7 @@
     <div class="col-md-6 row features-section">
       <div class="row col-md-5" style="flex-direction: column;">
         <div class="feature col-md-12">
-          <a href="">
+          <a href="{% url 'machinery:machinery' %}">
             <div class="feature-content feature-content1">
               <div class="main-text-li" style="display: flex;align-items: left;justify-content: left;flex-direction: column;">
                 <span class="text-features">Machinery</span>
