--- a/core/templates/core/elements/main-script.html
+++ b/core/templates/core/elements/main-script.html
@@ -4,3 +4,6 @@
 
 <!-- global js -->
 <script src="{% static 'core/js/background.js' %}"></script>
+
+<!-- welcome js -->
+<script src="{% static 'core/js/welcome.js' %}"></script>
