--- a/core/templates/core/elements/main-style.html
+++ b/core/templates/core/elements/main-style.html
@@ -12,3 +12,6 @@
 
 <!-- global css -->
 <link rel="stylesheet" href="{% static 'core/css/background.css' %}">
+
+<!-- welcome css -->
+<link rel="stylesheet" href="{% static 'core/css/welcome.css' %}">
