--- a/machinery/templates/machinery/partial/base.html
+++ b/machinery/templates/machinery/partial/base.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block appstyling %}
-{% include 'core/elements/style.html' %}
+{% include 'machinery/elements/style.html' %}
 {% endblock appstyling %}
 
 {% block mainapp %}
@@ -11,5 +11,5 @@
 {% endblock mainapp %}
 
 {% block appscripting %}
-{% include 'core/elements/script.html' %}
+{% include 'machinery/elements/script.html' %}
 {% endblock appscripting %}
