--- a/core/templates/core/partial/main-base.html
+++ b/core/templates/core/partial/main-base.html
@@ -10,6 +10,7 @@
 
 <body>
 {% include 'core/elements/navbar.html' %}
+<div style="margin-top: 100px;"></div>
 {% block mainapp %}
 {% endblock mainapp %}
 
