--- a/assets_manage/templates/assets_manage/app/vehicle_form.html
+++ b/assets_manage/templates/assets_manage/app/vehicle_form.html
@@ -6,12 +6,19 @@
 
 <div class="container">
     <h1>Add New Vehicle</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Save</button>
-    </form>
-    <a href="{% url 'assets_manage:vehicle_list' %}">Back to List</a>
+    <a class="back_to_list" href="{% url 'assets_manage:vehicle_list' %}">Back to List</a>
+    <div class="row">
+        <div class="col-md-6">
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button class="form_save" type="submit">Save</button>
+            </form>
+        </div>
+        <div class="col-md-6 form-img-div">
+            <img class="form-img" src="../../../static/assets_manage/image/car.svg" alt="">
+        </div>
+    </div>
 </div>
 
 {% endblock index %}
