--- a/assets_manage/templates/assets_manage/app/vehicle_detail.html
+++ b/assets_manage/templates/assets_manage/app/vehicle_detail.html
@@ -5,7 +5,7 @@
 
 <div class="container">
     <h1>Vehicle Detail</h1>
-    <table>
+    <table class="mb-4">
         <tr>
             <th>ID</th>
             <td>{{ vehicle.id }}</td>
@@ -47,7 +47,7 @@
             <td>{{ vehicle.next_service_due }}</td>
         </tr>
     </table>
-    <a href="{% url 'assets_manage:vehicle_list' %}">Back to List</a>
+    <a class="back_to_list" href="{% url 'assets_manage:vehicle_list' %}">Back to List</a>
 </div>
 
 {% endblock index %}
