--- a/assets_manage/templates/assets_manage/app/assets_location.html
+++ b/assets_manage/templates/assets_manage/app/assets_location.html
@@ -14,6 +14,9 @@
     <link href="https://cdn.maptiler.com/maptiler-sdk-js/v2.0.3/maptiler-sdk.css" rel="stylesheet" />
     <script src="https://cdn.maptiler.com/leaflet-maptilersdk/v2.0.0/leaflet-maptilersdk.js"></script>
     <style>
+      #map{
+        z-index: 100;
+      }
       table {
         width: 100%;
         border-collapse: collapse;
@@ -34,7 +37,7 @@
     </div>
 
     <div class="container">
-      <h1>Asset List</h1>
+      <h1>Asset Location List</h1>
       <table>
         <thead>
           <tr>
