added maitain page

--- a/assets_manage/templates/assets_manage/app/assets_manage.html
+++ b/assets_manage/templates/assets_manage/app/assets_manage.html
@@ -33,7 +33,7 @@
             <div class="vehicle_para">
                 <h3>Status Monitoring in Asset Management</h3>
                 <p>Status Monitoring is a crucial component of asset management that involves tracking and recording the operational state of assets throughout their lifecycle. This ensures that all assets, such as vehicles and machinery, are functioning efficiently and any issues are addressed promptly. Here's an overview of how status monitoring can be implemented and its significance</p>
-                <a class="view_list" href="{% url 'assets_manage:asset_status' %}">View Vehicle Inventory</a>
+                <a class="view_list" href="{% url 'assets_manage:asset_status' %}">View Vehicle Status</a>
             </div>
         </div>
         <div class="col-md-6 vehicle_para_img p-0">
