--- a/core/templates/core/app/welcome.html
+++ b/core/templates/core/app/welcome.html
@@ -26,11 +26,16 @@
           </a>
         </div>
         <div class="feature col-md-12">
-          <div class="feature-content feature-content2">
-            <div class="main-text-li">
-              <span class="text-features"></span>
-            </div>
-          </div>
+            <a href="{% url 'maintain:maintain' %}">
+              <div class="feature-content feature-content1">
+                <div class="main-text-li">
+                  <span class="text-features">Maintenance Management</span>
+                  <div style="display: flex;align-items: center;justify-content: center;">
+                    <img src="../../../static/core/image/settings.svg" alt="" style="margin-top: 0;">
+                  </div>
+                </div>
+              </div>
+            </a>
         </div>
         <div class="feature col-md-12">
           <div class="feature-content"></div>
