--- a/core/templates/core/partial/main-base.html
+++ b/core/templates/core/partial/main-base.html
@@ -8,9 +8,9 @@
     {% endblock appstyling %}
 </head>
 
-<body>
+<body style="overflow-x: hidden;">
 {% include 'core/elements/navbar.html' %}
-<div style="margin-top: 100px;"></div>
+<div style="margin-top: 75px;"></div>
 {% block mainapp %}
 {% endblock mainapp %}
 
