--- a/userauths/templates/userauths/elements/style.html
+++ b/userauths/templates/userauths/elements/style.html
@@ -1,3 +1,4 @@
 {% load static %}
 <!-- userauths css -->
 <link rel="stylesheet" href="{% static 'userauths/css/userauths.css' %}">
+<link rel="stylesheet" href="{% static 'userauths/css/welcome-user.css' %}">
