--- a/core/templates/core/app/welcome.html
+++ b/core/templates/core/app/welcome.html
@@ -32,8 +32,17 @@
             </a>
         </div>
         <div class="feature col-md-12">
-          <div class="feature-content"></div>
-        </div>
+          <a href="{% url 'core:query' %}">
+            <div class="feature-content feature-content1">
+              <div class="main-text-li">
+                <span class="text-features">Public Queries</span>
+                <div style="display: flex;align-items: center;justify-content: center;">
+                  <img style="width: 6em;" src="../../../static/core/image/qa.svg" alt="" style="margin-top: 0;">
+                </div>
+              </div>
+            </div>
+          </a>
+      </div>
       </div>
       <div class="row col-md-7">
         <div class="feature col-md-12">
