--- a/core/templates/core/partial/main-base.html
+++ b/core/templates/core/partial/main-base.html
@@ -34,7 +34,7 @@
                         </div>
                         <img loading="lazy" class="direct-chat-img" src="../../../static/core/image/bot.jpeg" alt="message user image">
                         <div class="chat-display">
-                            <div class="direct-chat-text-ai direct-chat-text">Welcome to Wildfire prevention, How may I help you!</div>
+                            <div class="direct-chat-text-ai direct-chat-text">Welcome to Blinklog, How may I help you!</div>
                         </div>
                     </div>
                 </div>
