--- a/core/templates/core/app/health.html
+++ b/core/templates/core/app/health.html
@@ -8,7 +8,7 @@
     <div class="col-md-6 row features-section">
       <div class="row col-md-6" style="flex-direction: column;">
         <div class="feature col-md-12">
-          <a href="{% url 'assets_manage:assets_manage' %}">
+          <a href="{% url 'core:healthbed' %}">
             <div class="feature-content feature-content-odd1 feature-content-odd">
                 <div class="main-text-li">
                     <span class="text-features">Beds</span>
@@ -20,7 +20,7 @@
           </a>
         </div>
         <div class="feature col-md-12">
-            <a href="{% url 'maintain:maintain' %}">
+            <a href="{% url 'core:healthambu' %}">
               <div class="feature-content feature-content-odd2 feature-content-odd">
                 <div class="main-text-li">
                     <span class="text-features">Ambulance</span>
@@ -35,7 +35,7 @@
       <div class="row col-md-6">
         <div class="feature col-md-12">
           <div class="feature-content-odd feature-content-odd1">
-            <a href="">
+            <a href="{% url 'core:healtho2' %}">
             <div class="main-text-li">
                 <span class="text-features">Oxygen Cylinder</span>
                 <div style="display: flex;align-items: center;justify-content: center;">
@@ -47,7 +47,7 @@
         </div>
         <div class="feature col-md-12">
           <div class="feature-content-odd feature-content-odd2">
-            <a href="">
+            <a href="{% url 'core:healthstaff' %}">
                 <div class="main-text-li">
                     <span class="text-features">Staff</span>
                     <div style="display: flex;align-items: center;justify-content: center;">
